completion for final project part 2
