# projectFinal/routes/index.js
@@ -1,20 +1,22 @@
 const router = require('express').Router();
-//const passport = require('passport');
+const passport = require('passport');
 
 router.get('/', (req, res) => {res.send("\"/classical\" to see classical music database.")})
 router.use('/', require('./swagger'));
 router.use('/classical', require('./classical'));
 router.use('/contemporary', require('./contemporary'));
+router.use('/anime', require('./anime'));
+router.use('/videogame', require('./videogame'));
 
-// router.get('/login', passport.authenticate('github'), (req, res) => {});
+router.get('/login', passport.authenticate('github'), (req, res) => {});
 
-// router.get('/logout', (req, res, next) => {
-//     req.logout((err) => {
-//         if (err) {
-//             return next(err);
-//         }
-//         res.redirect('/');
-//     })
-// });
+router.get('/logout', (req, res, next) => {
+    req.logout((err) => {
+        if (err) {
+            return next(err);
+        }
+        res.redirect('/');
+    })
+});
 
 module.exports = router;
